--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a {
   /* Section 1 */
   .section1 {
     background-color: var(--darkSignUpBg);
-    background-image: url(/images/bg-curvy-desktop.svg);
+    background-image: url(./images/bg-curvy-desktop.svg);
     background-repeat: no-repeat;
     width: 100%;
     height: 440px;
