--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a {
   /* Section 1 */
   .section1 {
     background-color: var(--darkSignUpBg);
-    background-image: url(https://res.cloudinary.com/mastercraft/image/upload/v1641134832/bg-curvy-desktop_ovxwbw.svg);
+    background-image: url(https://res.cloudinary.com/mastercraft/image/upload/v1641134832/bg-curvy-desktop_ovxwbw.svg) !important;
     background-repeat: no-repeat;
     width: 100%;
     height: 440px;
